--- a/test proj/resources/css/styles.css
+++ b/test proj/resources/css/styles.css
@@ -10,8 +10,8 @@ body {  min-width: 499px; /* your desired width */
     position: relative;
     vertical-align:middle;
     background-color: rgb(90, 19, 19);
-    overflow-y:hidden;  
-    overflow-x:hidden;  
+    overflow-y:hidden;
+    overflow-x:hidden;
     overflow: hidden;
 }
 
@@ -21,7 +21,7 @@ body {  min-width: 499px; /* your desired width */
         position: relative;
         left:80px;
       }
-      
+
       .ml1 .letter {
         display: inline-block;
         line-height: 1em;
@@ -29,7 +29,7 @@ body {  min-width: 499px; /* your desired width */
         color: #FFF;
         font-weight: 100;
       }
-      
+
       .ml1 .text-wrapper {
         position: relative;
         display: inline-block;
@@ -37,7 +37,7 @@ body {  min-width: 499px; /* your desired width */
         padding-right: 0.05em;
         padding-bottom: 0.15em;
       }
-      
+
       .ml1 .line {
         opacity: 0;
         position: absolute;
@@ -47,7 +47,7 @@ body {  min-width: 499px; /* your desired width */
         background-color: #F7CA18;
         transform-origin: 0 0;
       }
-      
+
       .ml1 .line1 { top: 0; }
       .ml1 .line2 { bottom: 0; }
 
@@ -60,7 +60,7 @@ body {  min-width: 499px; /* your desired width */
         text-transform: uppercase;
         letter-spacing: 0.2em;
       }
-      
+
       .ml15 .word {
         font-family: 'Bahianita', cursive;
         color: rgb(255, 255, 255);
@@ -93,7 +93,7 @@ body {  min-width: 499px; /* your desired width */
     }
     a.animated-button:link:after, a.animated-button:visited:after {
         content: "";
-            
+
         height: 0%;
         left: 50%;
         top: 50%;
@@ -131,8 +131,8 @@ body {  min-width: 499px; /* your desired width */
         -o-transition: all 1s ease;
         transition: all 1s ease;
     }
-    
-      
+
+
 a.animated-button.thar-one {
 	color: #fff;
 	cursor: pointer;
@@ -263,7 +263,7 @@ a.animated-button.thar-four:before {
 div.row
 {
  align-content: center;
-    
+
 }
 div.col-xs-6
 {
@@ -271,13 +271,13 @@ div.col-xs-6
     clear: both;
 }
 a.btn
-{   
+{
     font-family: 'Roboto', sans-serif;
     width:40%;
 }
 
 textarea#collectionNameInput{
-  
+
   resize:none;
   margin: 0px;
   height: 132px;
@@ -293,7 +293,7 @@ div#tagInputDivContainer{
   text-align: center;
 }
 
-h#title{
+h1#title{
   display: inline-block;
   color:white;
   font-family: 'Bahianita', cursive;
