make font-family global var; reset button and input tag to inherit font family

--- a/public/index.css
+++ b/public/index.css
@@ -17,4 +17,8 @@
     --font-weight-md: 500;
     --font-weight-thin: 400;
     --font-weight-thinn: 300;
+
+    --font-family: Avenir;
+
+    font-family: var(--font-family);
   }
